<resources>
    <string name="app_name">Apaga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_payment">PayMent</string>
    <string name="menu_buy_bags">Buy Bags</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="pay">Pay</string>
    <string name="ok">ok</string>
    <string name="cancel">cancle</string>
    <string name="facebook_app_id">129331401741971</string>
    <string name="fb_login_protocol_scheme">fb129331401741971</string>
    <string name="title_activity_address">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Setttings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_scheduled_pickup">Scheduled pickup</string>
    <string name="menu_qr_code_scanner">Qr Code Scanner</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_logout">Logout</string>
    <string name="bag_id">Bag Id</string>
    <string name="no_qr_code">NO QR CODE</string>
    <string name="welcome_text">Welcome to SmartApaga</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="bdg">Bdg</string>
    <string name="apt">Apt</string>
    <string name="floor">Floor</string>
    <string name="entr">Entr</string>
    <string name="schedule_a_pickup">SCEDULE A PICUP</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="note">Note:</string>
    <string name="bags">Bags</string>
    <string name="pickup_description">Pickup description</string>
    <string name="address">Address</string>
    <string name="cancel_this_pickup">Cancel This Pickup</string>
    <string name="edit_this_pickup">Edit this Pickup</string>
    <string name="menu_waste">Waste</string>
    <string name="add_another_bag">Add another bag</string>
    <string name="next">Next</string>
    <string name="qr_code">My QR code</string>
    <string name="regions">Regions</string>
    <string name="street_name">Street Name</string>
    <string name="card_number">Card number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="remember_card">Remember card</string>
    <string name="cancel_pickup">Cancel Pickup</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="note_for_driver">Note for Driver</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="schedule_a_pPickup">Schedule a Pickup</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="sign_up_as_an_organization">Sign-up as an organization</string>
    <string name="company_legal_name">Company Legal Name</string>
    <string name="tax_code">Tax Code</string>
    <string name="legal_address">Legal Address</string>
    <string name="signing_director_s_name">Signing Director’s Name</string>
    <string name="stop">Stop!</string>
    <string name="nevermind">Nevermind</string>
    <string name="i_want_to_cancel">I want to cancel</string>
    <string name="smart_apaga_email">info@smartapaga.com</string>
    <string name="spart_apaga_fb">www.facebook.com/smartapaga</string>
    <string name="spart_apaga_phone">+374 95-90-42-45</string>
    <string name="i_understand">I understand</string>
    <string name="waste">Waste</string>
    <string name="to">To</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="interval_min_3_hours">Interval (min:3 hours)</string>
    <string name="min_int_3">minimum interval 3</string>
    <string name="camera_permisson_text">Camera Permission is Required</string>

</resources>
