<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scheduled_pickup"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_scheduled_pickup" />
        <item
            android:id="@+id/nav_buy_bags"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_buy_bags" />
        <item
            android:id="@+id/nav_qr_code_scanner"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_qr_code_scanner" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_notifications" />
    </group>
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
    </group>
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_logout" />
    </group>
</menu>
