<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.apaga.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.apaga.ui.registration.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" />
    <navigation
        android:id="@+id/nav_graph_home" >
        <fragment
            android:id="@+id/nav_payment"
            android:name="com.example.apaga.ui.payment.PaymentFragment"
            android:label="@string/menu_payment"
            tools:layout="@layout/fragment_payment" />
        <fragment
            android:id="@+id/nav_buy_bags"
            android:name="com.example.apaga.ui.buybags.BuyBagasFragment"
            android:label="@string/menu_buy_bags"
            tools:layout="@layout/fragment_buy_bugs" />
        <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.apaga.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />
        <fragment
            android:id="@+id/nav_tools"
            android:name="com.example.apaga.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />
        <fragment
            android:id="@+id/nav_share"
            android:name="com.example.apaga.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />
        <fragment
            android:id="@+id/nav_send"
            android:name="com.example.apaga.ui.send.SendFragment"
            android:label="@string/menu_send"
            tools:layout="@layout/fragment_send" />
    </navigation>
    <activity
        android:id="@+id/addressActivity3"
        android:name="com.example.apaga.ui.address.AddressActivity"
        android:label="AddressActivity" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.apaga.ui.main.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
</navigation>