<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.apaga.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/action_nav_payment_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/nav_buy_bags"
        android:name="com.example.apaga.ui.buybags.BuyBagsFragment"
        android:label="@string/menu_buy_bags"
        tools:layout="@layout/fragment_buy_bugs" >
        <action
            android:id="@+id/action_nav_buy_bags_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.apaga.ui.notifications.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_nav_notifications_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/nav_waste"
        android:name="com.example.apaga.ui.waste.WasteFragment"
        android:label="fragment_waste"
        tools:layout="@layout/fragment_waste" />
    <fragment
        android:id="@+id/nav_qr_code_scanner"
        android:name="com.example.apaga.ui.bagscan.BagScanFragment"
        android:label="@string/qr_code"
        tools:layout="@layout/fragment_bag_scan" >
        <action
            android:id="@+id/action_nav_qr_code_scanner_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>
    <activity
        android:id="@+id/nav_settings"
        android:name="com.example.apaga.ui.settings.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
    <activity
        android:id="@+id/addressActivity"
        android:name="com.example.apaga.ui.address.AddressActivity"
        android:label="AddressActivity" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.apaga.ui.dashboard.DashboardFragment"
        android:label="@string/fragment_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>