<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:textColor="@color/textColorDark"
        android:textSize="17sp"
        android:textStyle="normal"
        tools:targetApi="lollipop"
        tools:text="@string/stop" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/textColorDarkBlack"
        android:textSize="13sp"
        android:textStyle="normal"
        tools:targetApi="lollipop"
        tools:text="You are about to cancel or edit your pickup. Cancelling or editing more than 24 hours prior to the scheduled time is not a problem.
Cancelling or editing a pickup within 24 hours of your scheduled pickup may decrease your reliability rating and may cause slight to significant increases in future pickup costs.
Remember that you can leave your bags at a neighbour’s home or in front of your door if you are sure that they will not be stolen or lost. For more information please contact us at the coordinates below.
" />
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:textColor="@color/textColorDark"
        android:textSize="15sp"
        android:textStyle="normal"
        tools:targetApi="lollipop"
        android:layout_marginTop="20dp"
        tools:text="@string/smart_apaga_email" />
    <TextView
        android:id="@+id/txt_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:textColor="@color/textColorDark"
        android:textSize="15sp"
        android:textStyle="normal"
        tools:targetApi="lollipop"
        tools:text="@string/spart_apaga_fb" />
    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:textColor="@color/textColorDark"
        android:textSize="15sp"
        android:textStyle="normal"
        tools:targetApi="lollipop"
        tools:text="@string/spart_apaga_phone" />


    <CheckBox
        android:id="@+id/checkBox_understand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/i_understand" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="2sp"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:text="@string/nevermind"
            android:textAllCaps="true"
            android:textColor="@color/textColorLight"
            android:background="@drawable/light_buttons_background"
            android:textSize="10sp"
            android:gravity="center"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?android:attr/selectableItemBackground"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="2sp"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:text="@string/i_want_to_cancel"
            android:textAllCaps="true"
            android:textColor="@color/textColorLight"
            android:background="@drawable/disable_buttons_background"
            android:textSize="10sp"
            android:gravity="center"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

       >

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>